# databaze_structures

./: CMakeLists.txt  Functions.cpp  Functions.h  Input.txt  README.md
.github/workflows/: cmake1.yml  cmake2.yml
Function_lib/: CMakeLists.txt
databaze/: CMakeLists.txt  data-baze2_class.cpp
